# askjg-demo-gemini-pcc

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pcc-deploy.toml  pyproject.toml
.github/workflows/: ci.yml
bot/: bot.py  call_recorder.py  end_of_call_reporter.py  transport_context.py
bot/core/: __init__.py  gcs.py  gemini.py  health.py  observers.py  prompts.py
bot/pipelines/: __init__.py  base.py  gemini.py
bot/processors/: __init__.py  session_timer.py
bot/prompts/: demo_system_prompt.md  summary_prompt.md  transcript_processing_prompt.md
custom_voice_agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  agent.py  livekit_ui_integration.py  main.py  pcc-deploy.toml  pyproject.toml  requirements.txt  supervisord.conf
custom_voice_agent/frontend/: package-lock.json  package.json
custom_voice_agent/llm/: gemini_live.py
custom_voice_agent/src/custom_voice_agent/: __main__.py  frames.py  livekit_ui_integration.py  main.py
custom_voice_agent/src/custom_voice_agent/llm/: gemini_live.py
custom_voice_agent/src/custom_voice_agent/transport/: livekit_input.py  livekit_output.py
custom_voice_agent/tests/: conftest.py  test_frames.py  test_livekit_vad.py  test_main.py  test_output.py  test_vad.py
custom_voice_agent/transport/: livekit_input.py  livekit_output.py
custom_voice_agent/vad/: silero_vad.py
frontend/: app.tsx
tests/: conftest.py  test_health.py
