[project]
name = "custom-voice-agent"
version = "0.1"
description = "Custom voice agent using LiveKit + Gemini Live (no Pipecat dependency)"
requires-python = ">=3.10"
dependencies = [
    # Gemini Live API (WebSocket streaming)
    "google-genai>=1.0.0",
    # LiveKit Python SDK (WebRTC transport)
    "livekit>=0.18.0",
    # LiveKit API (token generation)
    "livekit-api>=0.7.0",
    # Silero VAD ONNX model inference
    "onnxruntime>=1.16.0",
    # Audio processing
    "numpy>=1.24.0",
    # Google auth for Vertex AI
    "google-auth>=2.0.0",
    # Environment variable loading
    "python-dotenv",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
